--- a/app/globals.css
+++ b/app/globals.css
@@ -3,14 +3,13 @@
 
 :root {
   --text: white;
-  --background: rgb(3, 27, 0);
-  --foreground: rgba(0, 0, 0, 0.555);
+  --sub-text: rgba(255, 255, 255, 0.637);
+  --background: rgb(0, 0, 0);
+  --foreground: rgba(0, 0, 0, 0.568);
   scroll-behavior: smooth;
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
 
