--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,8 @@
   --sub-text: rgba(255, 255, 255, 0.637);
   --background: rgb(0, 0, 0);
   --foreground: rgba(0, 0, 0, 0.568);
+  --red-button: #7c0000;
+  --green-button: #105200da;
   scroll-behavior: smooth;
 }
 
