Stores' reinitialization fixed

--- a/app/[lang]/globals.css
+++ b/app/[lang]/globals.css
@@ -14,7 +14,7 @@
 :root {
   --icons: #000000;
   /* --theme: #0f4200; */
-  --theme: #32af13;
+  --theme: #3faf13;
   --theme2: #373b37;
   --theme3: #458fff;
   --dark-text: rgb(1, 1, 1);
